Resolves: tdf#145645 pivot table popups don't dismiss when item activated

Change-Id: I5a68a08600b7792d924ec77694a60651df5d9c83
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/125112
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>