sc/source/ui/view/gridwin2.cxx
@@ -382,9 +382,10 @@ public:
     explicit DPFieldPopupOKAction(ScGridWindow* p) :
         mpGridWindow(p) {}
 
-    virtual void execute() override
+    virtual bool execute() override
     {
         mpGridWindow->UpdateDPFromFieldPopupMenu();
+        return true;
     }
 private:
     VclPtr<ScGridWindow> mpGridWindow;
@@ -404,7 +405,7 @@ public:
         , mpViewShell(pViewShell)
     {}
 
-    virtual void execute() override
+    virtual bool execute() override
     {
         switch (meType)
         {
@@ -420,6 +421,7 @@ public:
             default:
                 ;
         }
+        return true;
     }
 
 private:
